Make SVN links use much smaller font, to avoid wrapping (in FF) or widening content (in Google Chrome and probably everything else).
Also, use more <pre> instead of <tt> for them.

git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/www@6896 afe8dcc5-9094-451b-8773-5f495042a737

--- a/htdocs/vrmlengine.css
+++ b/htdocs/vrmlengine.css
@@ -36,6 +36,12 @@ a.kscript_func_docs { text-decoration: underline; }
 pre.terminal { background-color: #EEE;  padding: 0.3em; }
 tt.terminal { background-color: #EEE; }
 
+/* SVN URLs tend to be long, and they look confusing when they are wrapped
+   (in Firefox/Iceweasel) or cannot wrap (in Google Chrome and probably
+   others). */
+pre.small { font-size: xx-small; }
+tt.small { font-size: xx-small; }
+
 span.js_link { text-decoration: underline; color: #00F; cursor: pointer; }
 
 /* Style for note_box and note_title shamelessly stolen from CSS
